[package]
name = "cw721-tickets"
version = "0.1.0"
authors = ["Jaehong Ahn <monsieur.ahn@gmail.com>"]
edition = "2018"
description = "CW721-based NFT to store tickets metadata"
repository = "https://github.com/postie-labs/cw721-tickets"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
  "artifacts/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
build = "RUSTFLAGS='-C link-arg=-s' cargo wasm"
optimize = """
docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.5
"""
optimize-arm64 = """
docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer-arm64:0.12.5
"""

[dependencies]
cw721 = "0.9.2"
cw721-base = { version = "0.9.2", features = ["library"] }
cosmwasm-std = { version = "0.16.7" }
schemars = "0.8.8"
serde = { version = "1.0.136", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.30" }

[dev-dependencies]
cosmwasm-schema = { version = "0.16.7" }
